public class Enemy extends Combatant {
    // Could later add special attack patterns or AI
}
