public class Player extends Combatant {
    // Can override attack() later to add crits or weapons
}
